# SFML-Project-Template

./: .gitignore  CMakeLists.txt  README.md
lib/: .gitignore
src/: main.cpp
